--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="7" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -94,7 +94,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-9" data-rv-view="2" style="background-image: url(assets/images/img-6528-2000x1333.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-9" data-rv-view="5" style="background-image: url(assets/images/img-6528-2000x1333.jpg);">
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -160,7 +160,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-b" data-rv-view="5" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-b" data-rv-view="8" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
