--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-g" data-rv-view="700">
+  <section id="dropdown-menu-g" data-rv-view="119">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -46,7 +46,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-25" data-rv-view="686" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-25" data-rv-view="105" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -122,7 +122,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-s" data-rv-view="698">
+<section class="mbr-section" id="header3-s" data-rv-view="117">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -133,7 +133,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-13" data-rv-view="704">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-13" data-rv-view="123">
     <!-- Gallery -->
     <div class="mbr-gallery-layout-article mbr-section__container mbr-section__container--isolated">
         <div>
@@ -255,7 +255,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-22" data-rv-view="739" style="background-image: url(assets/images/54521934-2320516664902961-1977323228485386240-o-1439x960.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-22" data-rv-view="158" style="background-image: url(assets/images/54521934-2320516664902961-1977323228485386240-o-1439x960.jpg);">
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -273,7 +273,7 @@
     
 </section>
 
-<section class="mbr-section" id="header3-15" data-rv-view="742">
+<section class="mbr-section" id="header3-15" data-rv-view="161">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -284,7 +284,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-24" data-rv-view="744" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-24" data-rv-view="163" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -364,7 +364,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-r" data-rv-view="763">
+<section class="mbr-section" id="content1-r" data-rv-view="182">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>‘’ A world so hateful some would rather die than be who they are ‘’
@@ -373,7 +373,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-14" data-rv-view="764" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-14" data-rv-view="183" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container boxed-slider container" style="padding-top: 93px; padding-bottom: 124px;">
         <div>
             
@@ -485,7 +485,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-21" data-rv-view="782" style="background-image: url(assets/images/img-006s7-2000x1333.jpeg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-21" data-rv-view="201" style="background-image: url(assets/images/img-006s7-2000x1333.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(25, 40, 82);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -503,13 +503,13 @@
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>瘋子政治家的VIDEO</a></div>
+                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="page5.html"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>瘋子政治家的VIDEO</a></div>
             </div>
         </div>
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-h" data-rv-view="702" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-h" data-rv-view="121" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
