--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-k" data-rv-view="679">
+  <section id="dropdown-menu-k" data-rv-view="98">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="600" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="19" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(31, 31, 31);"></div>
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 124px; padding-bottom: 124px;">
         <div class="row">
@@ -72,7 +72,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="603" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="22" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -162,7 +162,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="676" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="25" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -186,7 +186,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1a" data-rv-view="606">
+<section class="mbr-section" id="header3-1a" data-rv-view="28">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -197,7 +197,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="608">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="30">
     <div class="mbr-section__container article-slider container mbr-section__container--last">
         <div class=" col-sm-offset-2 col-sm-8">
             <ol class="carousel-indicators">
@@ -273,7 +273,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="620" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="42" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1y" data-rv-view="623">
+<section class="mbr-section" id="header3-1y" data-rv-view="45">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -361,7 +361,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="625" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="47" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(26, 44, 93);">
     </div>
     <div class="container container_toggle">
@@ -377,7 +377,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1x" data-rv-view="627">
+<section class="mbr-section" id="header3-1x" data-rv-view="49">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -388,7 +388,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="629" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="51" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -464,7 +464,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="641" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="63" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default container" style="padding-top: 124px; padding-bottom: 124px;">
         <div>
@@ -584,7 +584,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-20" data-rv-view="683" style="background-image: url(assets/images/img-6627w-1740x704.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-20" data-rv-view="100" style="background-image: url(assets/images/img-6627w-1740x704.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -608,7 +608,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="681" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="103" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
